<?xml version = '1.0' encoding = 'UTF-8'?>
<project xmlns = 'http://maven.apache.org/POM/4.0.0' xmlns:xsi = 'http://www.w3.org/2001/XMLSchema-instance'
         xsi:schemaLocation = 'http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd'>
  <modelVersion> 4.0.0 </modelVersion>

  <parent>
    <groupId> org.springframework.boot </groupId>
    <artifactId> spring-boot-starter-parent </artifactId>
    <version> 3.5.3 </version>
    <relativePath/>
  </parent>

  <groupId> lonter </groupId>
  <artifactId> buibot </artifactId>
  <version> 0.0.1 </version>
  <name> BuiBot </name>
  <description> BuiBot </description>

  <properties>
    <java.version> 23 </java.version>
    <start-class> lonter.buibot.BuiBot </start-class>
  </properties>

  <dependencies>
    <dependency>
      <groupId> org.springframework.boot </groupId>
      <artifactId> spring-boot-starter </artifactId>
    </dependency>

    <dependency>
      <groupId> org.projectlombok </groupId>
      <artifactId> lombok </artifactId>
    </dependency>

    <dependency>
      <groupId> org.jetbrains </groupId>
      <artifactId> annotations </artifactId>
      <version> 24.0.0 </version>
      <scope> compile </scope>
    </dependency>

    <!--suppress VulnerableLibrariesLocal -->
    <dependency>
      <groupId> net.dv8tion </groupId>
      <artifactId> JDA </artifactId>
      <version> 5.2.1 </version>
    </dependency>

    <dependency>
      <groupId> org.postgresql </groupId>
      <artifactId> postgresql </artifactId>
      <scope> runtime </scope>
    </dependency>

    <dependency>
      <groupId> org.mybatis.spring.boot </groupId>
      <artifactId> mybatis-spring-boot-starter </artifactId>
      <version> 3.0.4 </version>
    </dependency>

    <dependency>
      <groupId> org.mybatis.spring.boot </groupId>
      <artifactId> mybatis-spring-boot-starter-test </artifactId>
      <version> 3.0.4 </version>
      <scope> test </scope>
    </dependency>

    <dependency>
      <groupId> org.springframework </groupId>
      <artifactId> spring-webflux </artifactId>
    </dependency>

    <dependency>
      <groupId> com.fasterxml.jackson.core </groupId>
      <artifactId> jackson-databind </artifactId>
    </dependency>
  </dependencies>

  <build>
    <finalName> BuiBot </finalName>

    <plugins>
      <plugin>
        <groupId> org.apache.maven.plugins </groupId>
        <artifactId> maven-compiler-plugin </artifactId>

        <configuration>
          <annotationProcessorPaths>
            <path>
              <groupId> org.projectlombok </groupId>
              <artifactId> lombok </artifactId>
            </path>
          </annotationProcessorPaths>

          <source> 23 </source>
          <target> 23 </target>
          <compilerArgs> --enable-preview </compilerArgs>
        </configuration>
      </plugin>

      <plugin>
        <groupId> org.graalvm.buildtools </groupId>
        <artifactId> native-maven-plugin </artifactId>
      </plugin>

      <plugin>
        <groupId> org.springframework.boot </groupId>
        <artifactId> spring-boot-maven-plugin </artifactId>

        <configuration>
          <excludes>
            <exclude>
              <groupId> org.projectlombok </groupId>
              <artifactId> lombok </artifactId>
            </exclude>
          </excludes>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>